--- a/Usuario/src/main/resources/application.properties
+++ b/Usuario/src/main/resources/application.properties
@@ -1,13 +1,8 @@
 spring.application.name=usuario
-# Kafka Configuration
-spring.kafka.bootstrap-servers=localhost:9092
-spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
-spring.kafka.consumer.group-id=usuario-service-group
-spring.kafka.consumer.properties.spring.json.trusted.packages=*
+server.port=8081
 
-# Database Configuration (optional - add if needed)
-# spring.datasource.url=jdbc:mysql://localhost:3306/usuario
-# spring.datasource.username=root
-# spring.datasource.password=
-# spring.jpa.hibernate.ddl-auto=update
-# spring.jpa.show-sql=true
+spring.datasource.url=jdbc:mysql://localhost:3306/usuario
+spring.datasource.username=root
+spring.datasource.password=mario14y15.
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
