--- a/curso/src/main/resources/application.properties
+++ b/curso/src/main/resources/application.properties
@@ -1,17 +1,9 @@
 spring.application.name=curso
-# Kafka Configuration
-spring.kafka.bootstrap-servers=localhost:9092
-spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
-spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
-spring.kafka.consumer.group-id=curso-service-group
-spring.kafka.consumer.properties.spring.json.trusted.packages=*
+server.port=8082
 
-# Custom Topic Configuration
-usuario.topic.asignaciones=curso.usuario.asignaciones
 
-# Database Configuration (optional - add if needed)
-# spring.datasource.url=jdbc:mysql://localhost:3306/curso
-# spring.datasource.username=root
-# spring.datasource.password=
-# spring.jpa.hibernate.ddl-auto=update
-# spring.jpa.show-sql=true
+spring.datasource.url=jdbc:mysql://localhost:3306/curso
+spring.datasource.username=root
+spring.datasource.password=mario14y15.
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
