--- a/Usuario/src/main/resources/application.properties
+++ b/Usuario/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.datasource.username=root
 spring.datasource.password=mario14y15.
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
