--- a/curso/src/main/resources/application.properties
+++ b/curso/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.datasource.username=root
 spring.datasource.password=mario14y15.
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+# Configuración de OpenAPI / Swagger UI
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
