--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -6,5 +6,6 @@ spring.security.oauth2.client.registration.spring-client-api-rest.authorization-
 spring.security.oauth2.client.registration.spring-client-api-rest.scope=openid,profile,email
 spring.security.oauth2.client.registration.spring-client-api-rest.redirect-uri=http://localhost:8080/login/oauth2/code/spring-client-api-rest
 spring.security.oauth2.client.provider.spring-client-api-rest.issuer-uri=http://localhost:9090/realms/springboot-realm-dev
+spring.cloud.gateway.default-filters[0]=TokenRelay
 logging.level.org.springframework.security=DEBUG
 server.port=8080
