--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -14,5 +14,9 @@ spring.security.oauth2.client.registration.spring-client-api-rest.authorization-
 spring.security.oauth2.client.registration.spring-client-api-rest.scope=openid,profile,email
 spring.security.oauth2.client.registration.spring-client-api-rest.redirect-uri=http://localhost:8080/login/oauth2/code/spring-client-api-rest
 spring.security.oauth2.client.provider.spring-client-api-rest.issuer-uri=http://localhost:9090/realms/springboot-realm-dev
+spring.security.oauth2.client.provider.spring-client-api-rest.user-name-attribute=preferred_username
 
-
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9090/realms/springboot-realm-dev
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:9090/realms/springboot-realm-dev/protocol/openid-connect/certs
+jwt.auth.converter.principal-attribute=preferred_username
+jwt.auth.converter.resource-id=spring-client-api-rest
