Funciona denuevo y todos tienen su securityconfig

--- a/Usuario/src/main/resources/application.properties
+++ b/Usuario/src/main/resources/application.properties
@@ -9,3 +9,8 @@ spring.jpa.show-sql=true
 
 springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9090/realms/springboot-realm-dev
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:9090/realms/springboot-realm-dev/protocol/openid-connect/certs
+jwt.auth.converter.principal-attribute=preferred_username
+jwt.auth.converter.resource-id=spring-client-api-rest
