--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -2,21 +2,30 @@ spring.application.name=gateway
 logging.level.org.springframework.security=DEBUG
 server.port=8080
 
+# Configuración de rutas del Gateway
 spring.cloud.gateway.server.webmvc.routes[0].id=prueba-service
 spring.cloud.gateway.server.webmvc.routes[0].uri=http://localhost:3600
 spring.cloud.gateway.server.webmvc.routes[0].predicates[0]=Path=/prueba/**
 spring.cloud.gateway.server.webmvc.routes[0].filters[0]=TokenRelay
 
-spring.security.oauth2.client.provider.keycloak.issuer-uri=http://localhost:8080/realms/myrealm
+# OAuth2 Client Configuration - CORREGIDO
+
+spring.security.oauth2.client.registration.spring-client-api-rest.provider=spring-client-api-rest
 spring.security.oauth2.client.registration.spring-client-api-rest.client-id=spring-client-api-rest
 spring.security.oauth2.client.registration.spring-client-api-rest.client-secret=9gT7tla7swkej9pUxe73l5eq8Bt4fuqR
 spring.security.oauth2.client.registration.spring-client-api-rest.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.spring-client-api-rest.scope=openid,profile,email
 spring.security.oauth2.client.registration.spring-client-api-rest.redirect-uri=http://localhost:8080/login/oauth2/code/spring-client-api-rest
+# Provider Configuration - USA EL MISMO NOMBRE DEL REGISTRATION
+spring.security.oauth2.client.provider.keycloak.issuer-uri=http://localhost:8080/realms/myrealm
 spring.security.oauth2.client.provider.spring-client-api-rest.issuer-uri=http://localhost:9090/realms/springboot-realm-dev
 spring.security.oauth2.client.provider.spring-client-api-rest.user-name-attribute=preferred_username
 
+# Resource Server Configuration
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9090/realms/springboot-realm-dev
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:9090/realms/springboot-realm-dev/protocol/openid-connect/certs
+
+
+# JWT Converter Configuration
 jwt.auth.converter.principal-attribute=preferred_username
 jwt.auth.converter.resource-id=spring-client-api-rest
