implementando a todo seguridad

--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -7,6 +7,14 @@ spring.cloud.gateway.server.webmvc.routes[0].id=prueba-service
 spring.cloud.gateway.server.webmvc.routes[0].uri=http://localhost:3600
 spring.cloud.gateway.server.webmvc.routes[0].predicates[0]=Path=/prueba/**
 spring.cloud.gateway.server.webmvc.routes[0].filters[0]=TokenRelay
+spring.cloud.gateway.server.webmvc.routes[1].id=usuario-service
+spring.cloud.gateway.server.webmvc.routes[1].uri=http://localhost:8081
+spring.cloud.gateway.server.webmvc.routes[1].predicates[0]=Path=/usuario/**
+spring.cloud.gateway.server.webmvc.routes[1].filters[0]=TokenRelay
+spring.cloud.gateway.server.webmvc.routes[2].id=curso-service
+spring.cloud.gateway.server.webmvc.routes[2].uri=http://localhost:8082
+spring.cloud.gateway.server.webmvc.routes[2].predicates[0]=Path=/curso/**
+spring.cloud.gateway.server.webmvc.routes[2].filters[0]=TokenRelay
 
 # OAuth2 Client Configuration - CORREGIDO
 
