--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -14,7 +14,6 @@ spring.cloud.gateway.server.webmvc.routes[1].filters[0]=TokenRelay
 spring.cloud.gateway.server.webmvc.routes[2].id=curso-service
 spring.cloud.gateway.server.webmvc.routes[2].uri=http://localhost:8082
 spring.cloud.gateway.server.webmvc.routes[2].predicates[0]=Path=/curso/**
-spring.cloud.gateway.server.webmvc.routes[2].filters[0]=TokenRelay
 
 # OAuth2 Client Configuration - CORREGIDO
 
@@ -23,6 +22,8 @@ spring.security.oauth2.client.registration.spring-client-api-rest.client-id=spri
 spring.security.oauth2.client.registration.spring-client-api-rest.client-secret=9gT7tla7swkej9pUxe73l5eq8Bt4fuqR
 spring.security.oauth2.client.registration.spring-client-api-rest.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.spring-client-api-rest.scope=openid,profile,email
+spring.security.oauth2.client.registration.spring-client-api-rest.redirect-uri=http://localhost:8080/login/oauth2/code/spring-client-api-rest
+
 # Provider Configuration - USA EL MISMO NOMBRE DEL REGISTRATION
 spring.security.oauth2.client.provider.keycloak.issuer-uri=http://localhost:8080/realms/myrealm
 spring.security.oauth2.client.provider.spring-client-api-rest.issuer-uri=http://localhost:9090/realms/springboot-realm-dev
